# mipt-cs-cpp

./: .gitmodules  README.md
.github/workflows/: cmake.yml
cmake_vcpkg/: CMakeLists.txt  README.md  registry.h  unit_tests.cpp  vcpkg.json
cmake_vcpkg/src/: complex.cpp  complex.h  main.cpp  registry.h  unit_tests.cpp
oop/: CMakeLists.txt  CmakeLists.txt  bank.cpp  bank.h  main.cpp
rest/: .env  CMakeLists.txt  README.md  builder.Dockerfile  client.cpp  docker-compose.yml  server.cpp  simple.Dockerfile  vcpkg.json
sqlite/: CMakeLists.txt  main.cpp  vcpkg.json
various/: CMakeLists.txt  decorator.cpp  destructors.cpp  factory_method.cpp  observer.cpp  operators.cpp  registry.cpp  singleton.cpp  stl_containers.cpp  templates.cpp  threads.cpp  type_casting.cpp  value_ptr_ref.cpp
